--- a/index.html
+++ b/index.html
@@ -3137,7 +3137,7 @@ slide:not(.current) .plotly.html-widget{
           </hgroup>
   </slide>
 
-<slide class=""><hgroup><h2>Bienvenidxs</h2></hgroup><article  id="bienvenidxs" class="smaller ">
+<slide class=""><hgroup><h2>Bienvenidxs</h2></hgroup><article  class="smaller " id="bienvenidxs">
 
 <p><br></p>
 
@@ -3149,7 +3149,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p><font size="4"> <em>– Equipo IM GTRM Perú</em> </font></p>
 
-</article></slide><slide class=""><hgroup><h2>Agenda</h2></hgroup><article  id="agenda" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Agenda</h2></hgroup><article  class="smaller " id="agenda">
 
 <p><br></p>
 
@@ -3169,7 +3169,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p><br> <br></p>
 
-</article></slide><slide class=""><hgroup><h2>1. ¿Que es Kobo?</h2></hgroup><article  id="que-es-kobo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>1. ¿Que es Kobo?</h2></hgroup><article  class="smaller " id="que-es-kobo">
 
 <p><br></p>
 
@@ -3196,7 +3196,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p><br> <br></p>
 
-</article></slide><slide class=""><hgroup><h2>Áreas de uso de Kobo</h2></hgroup><article  id="areas-de-uso-de-kobo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Áreas de uso de Kobo</h2></hgroup><article  class="smaller " id="areas-de-uso-de-kobo">
 
 <p><br></p>
 
@@ -3216,7 +3216,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p><br> <br></p>
 
-</article></slide><slide class=""><hgroup><h2>Algunas ventajas de Kobo</h2></hgroup><article  id="algunas-ventajas-de-kobo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Algunas ventajas de Kobo</h2></hgroup><article  class="smaller " id="algunas-ventajas-de-kobo">
 
 <p><br> <br> <img width="2%" src='assets/img/Location.png' title=''/> Recolección de ubicaciones GPS</p>
 
@@ -3232,7 +3232,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p><img width="3%" src='assets/img/Preparedness.png' title=''/> Diseño de formularios digitales sin necesidad de programar</p>
 
-</article></slide><slide class=""><hgroup><h2>Flujo de trabajo</h2></hgroup><article  id="flujo-de-trabajo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Flujo de trabajo</h2></hgroup><article  class="smaller " id="flujo-de-trabajo">
 
 <img width="80%" src='assets/img/Workflow.png' title=''/>
 
@@ -3248,7 +3248,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p><font size="5"> - <strong>Análisis</strong></font></p>
 
-</article></slide><slide class=""><hgroup><h2>Antes de empezar</h2></hgroup><article  id="antes-de-empezar" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Antes de empezar</h2></hgroup><article  class="smaller " id="antes-de-empezar">
 
 <p><br> <br></p>
 
@@ -3263,7 +3263,7 @@ slide:not(.current) .plotly.html-widget{
 <li><p>¿He seleccionado la <strong>metodología correcta</strong> para la recolección de datos?</p></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>2. Creación de una cuenta</h2></hgroup><article  id="creacion-de-una-cuenta" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>2. Creación de una cuenta</h2></hgroup><article  class="smaller " id="creacion-de-una-cuenta">
 
 <p><br> <br> <font size="5"> ACNUR, OIM y OCHA ofrecen servidores gratuitos de Kobo: </font> <br> <br></p>
 
@@ -3275,35 +3275,35 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Esta presentación utiliza ejemplos del servidor Kobo de ACNUR; <strong>sin embargo, todos ofrecen los mismos servicios.</strong></p>
 
-</article></slide><slide class=""><hgroup><h2>Página de login</h2></hgroup><article  id="pagina-de-login" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Página de login</h2></hgroup><article  class="smaller " id="pagina-de-login">
 
 <img width="70%" src='assets/img/Login_1.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Activación de la cuenta</h2></hgroup><article  id="activacion-de-la-cuenta" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Activación de la cuenta</h2></hgroup><article  class="smaller " id="activacion-de-la-cuenta">
 
 <img width="60%" src='assets/img/Login_2.png' title=''/>
 
 <p>Confirmar el correo para finalizar el proceso</p>
 
-</article></slide><slide class=""><hgroup><h2>Pantalla de Kobo</h2></hgroup><article  id="pantalla-de-kobo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Pantalla de Kobo</h2></hgroup><article  class="smaller " id="pantalla-de-kobo">
 
 <img width="90%" src='assets/img/Kobo_Page.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>3. Creación de un cuestionario</h2></hgroup><article  id="creacion-de-un-cuestionario" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>3. Creación de un cuestionario</h2></hgroup><article  class="smaller " id="creacion-de-un-cuestionario">
 
 <img width="90%" src='assets/img/Kobo_Page2.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Diseñar un cuestionario en línea</h2></hgroup><article  id="disenar-un-cuestionario-en-linea" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Diseñar un cuestionario en línea</h2></hgroup><article  class="smaller " id="disenar-un-cuestionario-en-linea">
 
 <img width="90%" src='assets/img/Questionnaire_1.png' title=''/>
 
 <p>Herramienta para crear cuestionarios en línea</p>
 
-</article></slide><slide class=""><hgroup><h2>Diseñar un cuestionario en línea (2)</h2></hgroup><article  id="disenar-un-cuestionario-en-linea-2" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Diseñar un cuestionario en línea (2)</h2></hgroup><article  class="smaller " id="disenar-un-cuestionario-en-linea-2">
 
 <img width="90%" src='assets/img/Questionnaire_2.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Formato xls: Qué es y por qué utilizarlo?</h2></hgroup><article  id="formato-xls-que-es-y-por-que-utilizarlo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Formato xls: Qué es y por qué utilizarlo?</h2></hgroup><article  class="smaller " id="formato-xls-que-es-y-por-que-utilizarlo">
 
 <p><font size="5"><strong>El diseño de cuestionarios en formato web tiene límites.</strong></font></p>
 
@@ -3315,7 +3315,7 @@ slide:not(.current) .plotly.html-widget{
 
 <img width="80%" src='assets/img/xls_form_download.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Formato xls: Estructura básica</h2></hgroup><article  id="formato-xls-estructura-basica" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Formato xls: Estructura básica</h2></hgroup><article  class="smaller " id="formato-xls-estructura-basica">
 
 <p>El formato xls se abre en Excel y automaticamente tiene un mínimo de tres pestañas:</p>
 
@@ -3339,7 +3339,7 @@ slide:not(.current) .plotly.html-widget{
 <li>Información general sobre el formulario: nombre, ID e idioma</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Formato xls: Pestaña &ldquo;Survey&rdquo;</h2></hgroup><article  id="formato-xls-pestana-survey" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Formato xls: Pestaña &ldquo;Survey&rdquo;</h2></hgroup><article  class="smaller " id="formato-xls-pestana-survey">
 
 <p>La pestaña &ldquo;Survey&rdquo; incluye un mínimo de tres columnas obligatorias:</p>
 
@@ -3351,7 +3351,7 @@ slide:not(.current) .plotly.html-widget{
 <li><p><strong>label:</strong> La pregunta que va a aparecer a la persona que llena el formulario</p></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Formato xls: Pestaña &ldquo;Choices&rdquo;</h2></hgroup><article  id="formato-xls-pestana-choices" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Formato xls: Pestaña &ldquo;Choices&rdquo;</h2></hgroup><article  class="smaller " id="formato-xls-pestana-choices">
 
 <p>La pestaña &ldquo;Choices&rdquo; contiene las listas de opciones multiples del formulario.</p>
 
@@ -3365,13 +3365,13 @@ slide:not(.current) .plotly.html-widget{
 <li><strong>label:</strong> Como la linea va a aparecer a la personas que llenará el formulario</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Formato xls: Tipos de preguntas</h2></hgroup><article  id="formato-xls-tipos-de-preguntas" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Formato xls: Tipos de preguntas</h2></hgroup><article  class="smaller " id="formato-xls-tipos-de-preguntas">
 
 <p>Kobo permite un gran número de tipos de preguntas:</p>
 
 <img width="50%" src='assets/img/Question_types.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Formato xls: Columnas opcionales en &ldquo;Survey&rdquo;</h2></hgroup><article  id="formato-xls-columnas-opcionales-en-survey" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Formato xls: Columnas opcionales en &ldquo;Survey&rdquo;</h2></hgroup><article  class="smaller " id="formato-xls-columnas-opcionales-en-survey">
 
 <p>La pestaña &ldquo;Survey&rdquo; tiene tres columnas obligatorias, pero se pueden añadir más dependiendo de las características de las preguntas.</p>
 
@@ -3389,31 +3389,31 @@ slide:not(.current) .plotly.html-widget{
 <li><p>Appearance</p></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Subir el formato xls en Kobo</h2></hgroup><article  id="subir-el-formato-xls-en-kobo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Subir el formato xls en Kobo</h2></hgroup><article  class="smaller " id="subir-el-formato-xls-en-kobo">
 
 <p>Una vez que el formato xls está revisado, remplazarlo es un proceso muy rápido:</p>
 
 <img width="100%" src='assets/img/xls_upload.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Recibir datos en Kobo</h2></hgroup><article  id="recibir-datos-en-kobo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Recibir datos en Kobo</h2></hgroup><article  class="smaller " id="recibir-datos-en-kobo">
 
 <p>Para poder empezar la recolección de datos, es necesario <strong>desplegar</strong> el formulario</p>
 
 <img width="100%" src='assets/img/deploy.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Recibir datos en Web</h2></hgroup><article  id="recibir-datos-en-web" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Recibir datos en Web</h2></hgroup><article  class="smaller " id="recibir-datos-en-web">
 
 <p>Para utilizar el formulario en versión web, es suficiente copiar y compartir el enlace:</p>
 
 <img width="100%" src='assets/img/enketo.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Recibir datos en Web (2)</h2></hgroup><article  id="recibir-datos-en-web-2" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Recibir datos en Web (2)</h2></hgroup><article  class="smaller " id="recibir-datos-en-web-2">
 
 <p>El enlace los va a llevar al formulario en línea:</p>
 
 <img width="80%" src='assets/img/enketo_2.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Recibir datos en aplicativo móvil</h2></hgroup><article  id="recibir-datos-en-aplicativo-movil" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Recibir datos en aplicativo móvil</h2></hgroup><article  class="smaller " id="recibir-datos-en-aplicativo-movil">
 
 <p><br> <br></p>
 
@@ -3429,7 +3429,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Los ejemplos de esta presentación utilizan <strong>Kobo Collect</strong>.</p>
 
-</article></slide><slide class=""><hgroup><h2>Configurar el aplicativo</h2></hgroup><article  id="configurar-el-aplicativo" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Configurar el aplicativo</h2></hgroup><article  class="smaller " id="configurar-el-aplicativo">
 
 <p><font size="5">Para utilizar el formulario, necesitan configurar el aplicativo.</font></p>
 
@@ -3442,7 +3442,7 @@ slide:not(.current) .plotly.html-widget{
 
 <img width="20%" src='assets/img/KoboCollect_1.jpg' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Descargar el formulario</h2></hgroup><article  id="descargar-el-formulario" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Descargar el formulario</h2></hgroup><article  class="smaller " id="descargar-el-formulario">
 
 <p>Una vez configurado el aplicativo, pueden descargar el formulario seleccionando &ldquo;Get Blank Form&rdquo;:</p>
 
@@ -3450,7 +3450,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p><em>Atención: El formulario descargado <strong>no</strong> se sincroniza automaticamente en caso de cambios en el formulario en Kobo!</em> Si hicieron cambios (por ejemplo, revisando el formato xls) después de haber desplegado un formulario, tienen que descargar la nueva versión.</p>
 
-</article></slide><slide class=""><hgroup><h2>Ingresar datos</h2></hgroup><article  id="ingresar-datos" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Ingresar datos</h2></hgroup><article  class="smaller " id="ingresar-datos">
 
 <p>Para ingresar datos, pueden seleccionar &ldquo;Fill Blank Form&rdquo; y llenar el formulario.</p>
 
@@ -3458,25 +3458,25 @@ slide:not(.current) .plotly.html-widget{
 
 <p><em>Atención: El formulario <strong>no</strong> es enviado automaticamente.</em> Para enviar el formulario, regresen al menú principal y seleccionen &ldquo;Send Finalized Form&rdquo;.</p>
 
-</article></slide><slide class=""><hgroup><h2>Análisis</h2></hgroup><article  id="analisis" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Análisis</h2></hgroup><article  class="smaller " id="analisis">
 
 <p>Kobo ofrece un resumen de todos los datos ingresados</p>
 
 <img width="80%" src='assets/img/Kobo_Analysis_1.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Análisis</h2></hgroup><article  id="analisis-1" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Análisis</h2></hgroup><article  class="smaller " id="analisis-1">
 
 <p>Y también puede crear reportes básicos</p>
 
 <img width="50%" src='assets/img/Kobo_Analysis_2.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>Análisis</h2></hgroup><article  id="analisis-2" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Análisis</h2></hgroup><article  class="smaller " id="analisis-2">
 
 <p>Para descargar los datos, seleccionar &ldquo;Downloads&rdquo; y el formato deseado</p>
 
 <img width="80%" src='assets/img/Kobo_Download.png' title=''/>
 
-</article></slide><slide class=""><hgroup><h2>¡Felicitaciones!</h2></hgroup><article  id="felicitaciones" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>¡Felicitaciones!</h2></hgroup><article  class="smaller " id="felicitaciones">
 
 <p><br> <br> <font size="6">¡Han creado su primera encuesta en Kobo!</font></p>
 
@@ -3484,7 +3484,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p><font size="5"><strong>Preguntas?</strong></font></p>
 
-</article></slide><slide class=""><hgroup><h2>Recursos útiles</h2></hgroup><article  id="recursos-utiles" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Recursos útiles</h2></hgroup><article  class="smaller " id="recursos-utiles">
 
 <p>Sitio web de KoboToolbox: <a href='https://www.kobotoolbox.org/' title=''>https://www.kobotoolbox.org/</a></p>
 
